# LIB-CC5502-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  punto.h  vector.h
elem/: poligono.h  punto.h  segmento.h  vector.h
tests/: test-cerradura-convexa.cpp  test-poligono.cpp  test-punto.cpp  test-segmento.cpp  test-vector.cpp
utils/: cerradura-convexa.h
